2009-01-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Add attribute  <svg xml:space="preserve"> in the
	header.  Most browsers are ignoring this, so we still need to keep the
	work-around that repeats this attribute for individual text segments.

2009-01-21  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm:  Add a user-editable toggle ClipToBoundingBox.
	Default behaviour remains unchanged, but setting this toggle to "true"
	tells PostScript to clip everything that outside the canvas area.

2009-01-15  Timothee Lecomte  <timothee.lecomte@lpa.ens.fr>

	* config/makefile.mgw:
	Add gp_cairo_helpers.o in the list of object files to build for
	wxt.

2009-01-14  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in config/config.cyg config/config.dj2 config/config.mgw
	config/config.nt config/config.os2 config/config.oww
	src/gplt_x11.c src/gplt_x11.h src/show.c term/x11.trm:
	Do away with the conditional code flag BINARY_X11_POLYGON.
	No one has ever reported problems with it, so use it always.

2009-01-14  Timothee Lecomte  <timothee.lecomte@lpa.ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_image):
	* src/wxterminal/gp_cairo.h:
	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (wxt_image):
	* term/cairo.trm (cairotrm_image):
	Change gp_cairo_draw_image prototype so that the conversion from
	gnuplot	internal image format to a unsigned int* is completely done
	outside	gp_cairo.c. Modify callers in cairo-based terminals
	accordingly. This is still preliminary work towards wxt-for-MacOSX.

2009-01-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c (process_event): Change the status bar of a non-active
	or persistent window only for almost2d plot.

	* src/gplt_x11.c (exec_cmd): Add field almost2d to plot_struct and set
	it according to sent ALMOST2D.

	* term/x11.trm (X11_text): Send information about ALMOST2D.

	* src/gadgets.h src/mouse.c: Move definition of macro ALMOST2D to
	gadgets.h.
