@@ -27,7 +27,7 @@ Makefile.am: Makefile.am.in
 	echo lua_DATA = lua/*.sty | fmt \
 	  | (tr '\012' @; echo) |sed 's/@$$/%/;s/@/ \\@/g' \
 	  | tr @% '\012 ' >> $@t
-	echo js_DATA = js/*.js | fmt \
+	echo js_DATA = js/* | fmt \
 	  | (tr '\012' @; echo) |sed 's/@$$/%/;s/@/ \\@/g' \
 	  | tr @% '\012 ' >> $@t
 	sed -n '/^##trm-files-end/,$$p' Makefile.am.in >> $@t
