@@ -1,3 +1,12 @@
+2009-01-23  Ethan Merritt  <merritt@u.washington.edu>
+
+	src/graphics.c src/term_api.h term/canvas.trm term/Makefile.am.in
+	term/js/gnuplot_mouse.css term/js/gnuplot_mouse.js term/js/grid.png:
+	Clean up mousing code for the canvas terminal.  Add a "mousebox"
+	table to the html output in standalone mode, including an icon that
+	toggles the grid lines. The table format is controlled by stylesheet
+	gnuplot_mouse.css, which can be locally customized.
+
 2009-01-22  Ethan Merritt  <merritt@u.washington.edu>
 
 	* term/svg.trm:  Add attribute  <svg xml:space="preserve"> in the
